chore: snapshot before ui redesign
